# echeo

./: .gitignore  .npmignore  BOUNTY_SCRAPING.md  BOUNTY_SOURCES.md  CHANGELOG.md  COMPLETE_FEATURE_LIST.md  COMPLETE_STATUS.md  Cargo.toml  DISTRIBUTION.md  Dockerfile  ECHEO_BRANDING.md  ECHEO_DECISION.md  ECHEO_FINAL.md  ECHEO_REBRAND.md  ENHANCEMENTS.md  FINAL_STATUS.md  FULL_TEST_SUMMARY.md  GITHUB_INTEGRATION.md  GITHUB_SETUP.md  HOW_TO_RUN.md  INSTALL.md  INTERFACE_ROADMAP.md  IP_ANALYSIS.md  LICENSE  LICENSING_STRATEGY.md  NPM_IMPROVEMENTS.md  NPM_PUBLISH.md  NPM_SUCCESS.md  PACKAGING_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_SCRAPER_COMPLETE.md  PUBLISHED.md  PUBLISH_CHECKLIST.md  QUICKSTART.md  QUICK_DISTRIBUTION.md  QUICK_START.md  README.md  REBRAND_STRATEGY.md  RUN_ME.md  (+20 more)
.github/workflows/: ci.yml  release.yml
.payload/: loadout.json
docs/: README.md  THE_PANTRY_COMPLETE.md
docs/repo-catalog/: COMPLETE_CATALOG.json  COMPLETE_CATALOG.md  COMPLETE_CATALOG_FIXED.md  THE_PANTRY.json
scripts/: build-release.sh  generate-pantry-infographic-enhanced.py  generate-pantry-infographic.py  generate-pantry-wrapped.py  install.sh  scan-all-repos-catalog.js  scan-all-repos-enhanced.js  scan-all-repos-fixed.js  scan-top-repos-with-code.js
src/: authorship.rs  cache.rs  deployer.rs  github.rs  main.rs  matchmaker.rs  scraper.rs  shredder.rs  summarizer.rs  vectorizer.rs
